syntax = "proto3";

package payment;

service PaymentService {
  rpc ProcessPayment (PaymentRequest) returns (PaymentResponse);
}

message PaymentRequest {
  string user_id = 1;
  string event_id = 2;
  double amount = 3;
  string method = 4;
}

message PaymentResponse {
  bool success = 1;
  string transaction_id = 2;
  string message = 3;
}
